SFDEV/force-app/main/default/objects/Studentnew__c/Studentnew__c.object-meta.xml
<CustomObject>
    <label>Studentnew</label>
    <nameField>
        <label>StudentName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studentsnewmany</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>