SFDEV/force-app/main/default/objects/Studentnew__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DVG</fullName>
            </value>
            <value>
                <fullName>BNG</fullName>
            </value>
            <value>
                <fullName>CHennai</fullName>
            </value>
            <value>
                <fullName>Hyd</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>USCity1</fullName>
            </value>
            <value>
                <fullName>city2</fullName>
            </value>
            <value>
                <fullName>city3</fullName>
            </value>
            <value>
                <fullName>city4</fullName>
            </value>
            <value>
                <fullName>city6</fullName>
            </value>
            <value>
                <fullName>city7</fullName>
            </value>
            <value>
                <fullName>city8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>