SFDEV/force-app/main/default/objects/Studentnew__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <inlineHelpText>This represents ID of a student</inlineHelpText>
    <label>id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>