SFDEV/force-app/main/default/objects/Studentnew__c/fields/perm_stu__c.field-meta.xml
<CustomField>
    <fullName>perm_stu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>perm stu??</label>
    <type>Checkbox</type>
</CustomField>