SFDEV/force-app/main/default/objects/Studentnew__c/validationRules/Future_Date_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Date_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c  &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Future dates are not allowed</errorMessage>
</ValidationRule>