SFDEV/force-app/main/default/objects/Studentnew__c/validationRules/phone_is_required_when_email_is_given.validationRule-meta.xml
<ValidationRule>
    <fullName>phone_is_required_when_email_is_given</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( Email__c))  &amp;&amp;  ISBLANK( Phone__c )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>phone is required when email is given</errorMessage>
</ValidationRule>